<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.nlte.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/my_nanodegree_apps"/>
    <Button
        android:id="@+id/btn_popular_movies"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="@android:color/white"
        android:text="@string/popular_movies"/>
    <Button
        android:id="@+id/btn_stock_hawk"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="@android:color/white"
        android:text="@string/stock_hawk"/>
    <Button
        android:id="@+id/btn_build_bigger"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="@android:color/white"
        android:text="@string/build_bigger"/>
    <Button
        android:id="@+id/btn_make_your_app_material"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="@android:color/white"
        android:text="@string/make_your_app_material"/>
    <Button
        android:id="@+id/btn_go_ubiquitous"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="@android:color/white"
        android:text="@string/go_ubiquitous"/>
    <Button
        android:id="@+id/btn_capstone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#2E3D49"
        android:textColor="@android:color/white"
        android:text="@string/capstone"/>
</LinearLayout>
